GWNatGateway/template.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Nat Gateway for each public subnet

Parameters: 
  ExportVpcStackName:
    Description: Name of the VPC Stack
    Type: String
    Default: gw-network
    
Resources:
  NatGateway1Eip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: EIP1
          
  NatGateway2Eip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: EIP2
          
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt NatGateway1Eip.AllocationId
      #ConnectivityType: 
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PublicSubnet1
      Tags: 
        - Key: Name
          Value: Nat Gateway Public Subnet 1 
          
  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:       
      AllocationId: !GetAtt NatGateway2Eip.AllocationId
      #ConnectivityType: 
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PublicSubnet2
      Tags: 
        - Key: Name
          Value: Nat Gateway Public Subnet 2     
          
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-VPC
      Tags: 
        - Key: Name
          Value: Private Route Table 1
  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
      RouteTableId: !Ref PrivateRouteTable1  
  PrivateSubnetRouteTableAssociation1:   
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PrivateSubnet1
              
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-VPC
      Tags: 
        - Key: Name
          Value: Private Route Table 2
  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
      RouteTableId: !Ref PrivateRouteTable2   
  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId:
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PrivateSubnet2
